[package]
name = "candle-roberta"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.80"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.2" }
hf-hub = "0.3.2"
serde = "1.0.197"
serde_json = "1.0.114"
tokenizers = "0.15.2"
